Fix missing unit requirements-dev.txt file.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,7 +25,7 @@ jobs:
           python -m venv .venv
           source .venv/bin/activate
           pip install --upgrade pip
-          pip install -r resume-infra/tests/unit/requirements.txt
+          pip install -r requirements-dev.txt
 
       - name: Run unit tests
         run: |
@@ -55,7 +55,7 @@ jobs:
           python -m venv .venv
           source .venv/bin/activate
           pip install --upgrade pip
-          pip install -r resume-infra/tests/integration/requirements.txt
+          pip install -r requirements-dev.txt
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
