--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,35 +7,9 @@ on:
     branches: [main]
 
 jobs:
-  unit-tests:
-    name: Run Unit Tests
+  test:
+    name: Run Unit and Integration Tests
     runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      - name: Install dependencies
-        run: |
-          python -m venv .venv
-          source .venv/bin/activate
-          pip install --upgrade pip
-          pip install -r requirements-dev.txt
-
-      - name: Run unit tests
-        run: |
-          source .venv/bin/activate
-          python -m pytest resume-infra/tests/unit/
-
-  integration-tests:
-    name: Run Integration Tests
-    runs-on: ubuntu-latest
-    needs: unit-tests
 
     env:
       AWS_REGION: us-east-1
@@ -50,7 +24,7 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Set up virtual environment and install dependencies
+      - name: Set up virtual environment and install dev requirements
         run: |
           python -m venv .venv
           source .venv/bin/activate
@@ -64,8 +38,57 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
+      - name: Run unit tests
+        run: |
+          source .venv/bin/activate
+          python -m pytest resume-infra/tests/unit/
+
       - name: Run integration tests
         run: |
           source .venv/bin/activate
           python -m pytest resume-infra/tests/integration/
+
+  deploy:
+    name: Deploy Infrastructure
+    runs-on: ubuntu-latest
+    needs: test
+
+    env:
+      AWS_REGION: us-east-1
+      AWS_SAM_STACK_NAME: cloud-resume-infra
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install AWS SAM CLI
+        uses: aws-actions/setup-sam@v2
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Validate SAM Template
+        run: sam validate --template resume-infra/template.yaml
+
+      - name: Build SAM Application
+        run: sam build --template-file resume-infra/template.yaml
+
+      - name: Deploy SAM Application
+        run: |
+          sam deploy \
+            --template-file .aws-sam/build/template.yaml \
+            --stack-name ${{ env.AWS_SAM_STACK_NAME }} \
+            --region ${{ env.AWS_REGION }} \
+            --capabilities CAPABILITY_IAM \
+            --no-confirm-changeset \
+            --no-fail-on-empty-changeset
 
