Add --resolve-s3 to enable dynamic s3 bucket for SAM deploy.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -90,5 +90,6 @@ jobs:
             --region ${{ env.AWS_REGION }} \
             --capabilities CAPABILITY_IAM \
             --no-confirm-changeset \
-            --no-fail-on-empty-changeset
+            --no-fail-on-empty-changeset \
+            --resolve-s3
 
