--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -181,7 +181,7 @@ jobs:
       AWS_REGION: us-east-1
       PROD_ROLE_ARN: arn:aws:iam::354076468099:role/GitHubActionsDeployer
       ROOT_ROLE_ARN: arn:aws:iam::697945510911:role/RootDnsGithubDeployer
-      HOSTED_ZONE_ID: Z01586713VI3GCIKLX3QW   # ROOT hosted zone id
+      HOSTED_ZONE_ID_SSM_PATH: /cloud-resume/root/hosted_zone_id
 
     steps:
       - name: Checkout repository
@@ -253,8 +253,9 @@ jobs:
             --stack-name root-dns \
             --template-file root-dns/root-dns.yaml \
             --parameter-overrides \
-              HostedZoneId=${HOSTED_ZONE_ID} \
+              HostedZoneIdSsmPath=/cloud-resume/root/hosted_zone_id \
               ApexTargetDomainName=${APEX} \
               WwwTargetDomainName=${WWW} \
             --capabilities CAPABILITY_NAMED_IAM \
-            --region us-east-1
+            --region ${{ env.AWS_REGION }}
+
