--- a/resume-site/config.json
+++ b/resume-site/config.json
@@ -1,1 +1,1 @@
-{ "apiBaseUrl": "https://70namim34b.execute-api.us-east-1.amazonaws.com/Prod/visitor-count" }
+{ "apiBaseUrl": "https://59ednufvvh.execute-api.us-east-1.amazonaws.com/Prod/visitor-count" }
