--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -154,15 +154,27 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20
+          cache: npm
+          cache-dependency-path: resume-site/package-lock.json
 
       - name: Install Puppeteer dependencies
         working-directory: resume-site
-        run: npm ci
+        env:
+          NPM_CONFIG_FETCH_RETRIES: '5'
+          NPM_CONFIG_FETCH_RETRY_MINTIMEOUT: '20000'
+          NPM_CONFIG_FETCH_RETRY_MAXTIMEOUT: '120000'
+        shell: bash
+        run: |
+          for i in {1..5}; do
+            npm ci --no-audit --fund=false && break
+            echo "npm ci failed (attempt $i). Retrying in $((i*10))s…"
+            sleep $((i*10))
+          done
 
       - name: Run Puppeteer E2E test
         working-directory: resume-site
         run: |
-          npx node tests/e2e/test-visitor-count.js https://reubenmulholland.com
+          npx node tests/e2e/test-visitor-count.js "https://${{ steps.get_domain.outputs.domain }}"
 
   root-dns:
     name: Update ROOT Route53 DNS
