--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,7 +12,7 @@ jobs:
         run: |
           python -m venv .venv
           source .venv/bin/activate
-          pip install -r resume-infra/tests/requirements.txt
+          pip install -r requirements-dev.txt
       - name: Run unit tests (integration auto-skips w/o creds)
         run: |
           source .venv/bin/activate
